# advent-of-code-2022

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aoc_solutions/: day1.py
